--- a/.github/workflows/oracle-db-build-ha.yml
+++ b/.github/workflows/oracle-db-build-ha.yml
@@ -117,7 +117,7 @@ jobs:
           script: core.setFailed('No Standbydb's Configured)
 
       - name: Install yq
-        run: sudo apt-get update && apt install -y yq
+        run: apt-get update && apt install -y yq
 
       - name: Check Fast Start Fail Over Ansible Variable
         id: getfsfomode
