--- a/.github/workflows/oracle-db-build-ha.yml
+++ b/.github/workflows/oracle-db-build-ha.yml
@@ -117,7 +117,11 @@ jobs:
           script: core.setFailed('No Standbydb's Configured)
 
       - name: Install yq
-        run: apt-get update && apt install -y yq
+        uses: dcarbone/install-yq-action@v1.1.1
+        with:
+          download-compressed: true
+          version: "v4.35.1"
+          force: true
 
       - name: Check Fast Start Fail Over Ansible Variable
         id: getfsfomode
