--- a/.github/workflows/oracle-db-build-ha.yml
+++ b/.github/workflows/oracle-db-build-ha.yml
@@ -76,11 +76,12 @@ jobs:
     timeout-minutes: 1440
     continue-on-error: false
     steps:
+
       - name: Prepare Primary Inventory Name
         id: prepareprimaryname
         run: |
           echo "primaryHost=environment_name_$(echo ${{ github.event.inputs.TargetEnvironment }} | sed 's/delius-core-dev/delius_core_development_dev/;s/delius-core-test/delius_core_test_test/;s/delius-core-training/delius_core_test_training/;s/delius-core-stage/delius_core_preproduction_stage/;s/delius-core-pre-prod/delius_core_preproduction_pre_prod/;s/delius-core-prod/delius_core_production_prod/')_${{ github.event.inputs.TargetHost }}" >> $GITHUB_OUTPUT
-
+          
       - name: Checkout Inventory From modernisation-platform-configuration-management
         uses: actions/checkout@v4
         with:
@@ -103,6 +104,9 @@ jobs:
           then
             echo "standbydb1Host=${standbydb1Host}"  >> $GITHUB_OUTPUT
             echo "high_availability_count=1" >> $GITHUB_OUTPUT
+          else
+            echo "No standbydb's configured"
+            exit 1
           fi
           ls -l $inventory/group_vars/${standbydb2Host}.yml > /dev/null 2>&1
           if [[ $? -eq 0 ]]
@@ -111,11 +115,11 @@ jobs:
             echo "high_availability_count=2" >> $GITHUB_OUTPUT
           fi
 
-      - name: No Standbydb's Configured
-        if: ${{ steps.standbydbsconfigured.outputs.standbydb1Host == '' }}
-        uses: actions/github-script@v3
-        with:
-          script: core.setFailed('No Standbydb's Configured)
+      # - name: No Standbydb's Configured
+      #   if: ${{ steps.standbydbsconfigured.outputs.standbydb1Host == '' }}
+      #   uses: actions/github-script@v3
+      #   with:
+      #     script: core.setFailed('No Standbydb's Configured)
 
       - name: Install yq
         uses: dcarbone/install-yq-action@v1.1.1
@@ -146,8 +150,8 @@ jobs:
         id: getfsfomode
         working-directory: ${{ env.inventory }}
         run: |
-          fsfo_mode=$(ansible-inventory --host ${{ steps.prepareprimaryname.outputs.primaryHost }} --vars | yq '.fsfo_mode')
-          [ "$fsfo_mode" == "null" ] && echo "fsfo_mode=disabled" >> $GITHUB_OUTPUT || echo "fsfo_mode=$fsfo_mode" >> $GITHUB_OUTPUT
+          fsfo_mode=$(yq '.fsfo_mode' group_vars/${{ steps.prepareprimaryname.outputs.primaryHost }}.yml)
+          [ "$fsfo_mode" == "null" ] && echo 'fsfo_mode="disabled"' >> $GITHUB_OUTPUT || echo "fsfo_mode=$fsfo_mode" >> $GITHUB_OUTPUT
 
       - name: Build High Availability Standby 1 Database
         if: ${{ steps.standbydbsconfigured.outputs.standbydb1Host != '' }}
