--- a/.github/workflows/oracle-db-build-ha.yml
+++ b/.github/workflows/oracle-db-build-ha.yml
@@ -81,7 +81,7 @@ jobs:
         id: prepareprimaryname
         run: |
           echo "primaryHost=environment_name_$(echo ${{ github.event.inputs.TargetEnvironment }} | sed 's/delius-core-dev/delius_core_development_dev/;s/delius-core-test/delius_core_test_test/;s/delius-core-training/delius_core_test_training/;s/delius-core-stage/delius_core_preproduction_stage/;s/delius-core-pre-prod/delius_core_preproduction_pre_prod/;s/delius-core-prod/delius_core_production_prod/')_${{ github.event.inputs.TargetHost }}" >> $GITHUB_OUTPUT
-          
+
       - name: Checkout Inventory From modernisation-platform-configuration-management
         uses: actions/checkout@v4
         with:
@@ -156,12 +156,12 @@ jobs:
       - name: Build High Availability Standby 1 Database
         if: ${{ steps.standbydbsconfigured.outputs.standbydb1Host != '' }}
         run: |
-          echo "$command -i $inventory"
-          # -e primary=${{ steps.prepareprimaryname.outputs.primaryHost }} \
-          # -e standby=${{ steps.standbydbsconfigured.outputs.standbydb1Host }} \
-          # -e method=${{ github.event.inputs.Procedure }} \
-          # -e high_availability_count=${{ steps.standbydbsconfigured.outputs.high_availability_count }} \
-          # -e fsfo_mode=${{ steps.getfsfomode.outputs.fsfo_mode }} \
-          # -e standby_number=1 \
-          # -e primary_source_type=${{ github.event.inputs.PrimarySourceType }}"
+          echo "$command -i $inventory \
+          -e primary=${{ steps.prepareprimaryname.outputs.primaryHost }} \
+          -e standby=${{ steps.standbydbsconfigured.outputs.standbydb1Host }} \
+          -e method=${{ github.event.inputs.Procedure }} \
+          -e high_availability_count=${{ steps.standbydbsconfigured.outputs.high_availability_count }} \
+          -e fsfo_mode=${{ steps.getfsfomode.outputs.fsfo_mode }} \
+          -e standby_number=1 \
+          -e primary_source_type=${{ github.event.inputs.PrimarySourceType }}"
           
