--- a/.github/workflows/oracle-db-delius-operational-artefacts.yml
+++ b/.github/workflows/oracle-db-delius-operational-artefacts.yml
@@ -1,12 +1,8 @@
-name: "Oracle: Delius Artefacts"
-run-name: "Oracle: ${{ format('{0}_{1}', github.event.inputs.TargetEnvironment, github.event.inputs.TargetHost) }}_delius_artefacts"
+name: "Oracle: Delius Operational Artefacts"
+run-name: "Oracle: ${{ format('{0}_{1}', github.event.inputs.TargetEnvironment, github.event.inputs.TargetHost) }}_delius_operational_artefacts"
 on:
   workflow_dispatch:
     inputs:
-      TargetHost:
-        description: "Delius database target host"
-        type: string
-        default: "delius_primarydb"
       TargetEnvironment:
         description: "Target environment"
         required: true
@@ -18,27 +14,6 @@ on:
           - "delius-core-stage"
           - "delius-core-pre-prod"
           - "delius-core-prod"
-      DeployAudit:
-        description: "Deploy Database Audit Management?"
-        type: choice
-        default: "no"
-        options:
-          - "yes"
-          - "no"
-      DeployDavfs:
-        description: "Configure davfs for CFO?"
-        type: choice
-        default: "no"
-        options:
-          - "yes"
-          - "no"
-      DeployCfo:
-        description: "Deploy CFO Daily Extract?"
-        type: choice
-        default: "no"
-        options: 
-          - "yes"
-          - "no"
       DeployUsers:
         description: "Create Delius database users? (Read-Only, Read-Write, DBA)"
         type: choice
@@ -46,43 +21,8 @@ on:
         choice: 
           - "yes"
           - "no"
-      DeployAlfrescoWallet:
-        description: "Deploy Alfresco Wallet?"
-        type: choice
-        default: "no"
-        choice: 
-          - "yes"
-          - "no"
-      DeployGdpr: 
-        description: "Create Delius gdpr_pool database user?"
-        type: choice
-        default: "no"
-        choice: 
-          - "yes"
-          - "no"
-      DeployLogStashContactSearch:
-        description: "Create Delius contact_search_pool database user?"
-        type: choice
-        default: "no"
-        choice: 
-          - "yes"
-          - "no"
       DeployPerformanceTestUsers:
         description: "Create large set of users for performance testing?"
-        type: choice
-        default: "no"
-        choice:
-          - "yes"
-          - "no"
-      DeployMMSApi:
-        description: "Create Delius mms_pool database user?"
-        type: choice
-        default: "no"
-        choice:
-          - yes"
-          - "no"
-      DeployAuditedInteraction:
-        description: "Create Delius Audited Interaction Data Consolidation schema?"
         type: choice
         default: "no"
         choice:
@@ -129,9 +69,9 @@ jobs:
       - name: Prepare Delius Primary And All Inventory Name
         id: prepareinventorynames
         run: |
-          hosts="environment_name_$(echo ${{ github.event.inputs.TargetEnvironment }} | sed 's/delius-core-dev/delius_core_development_dev/;s/delius-core-test/delius_core_test_test/;s/delius-core-training/delius_core_test_training/;s/delius-core-stage/delius_core_preproduction_stage/;s/delius-core-pre-prod/delius_core_preproduction_pre_prod/;s/delius-core-prod/delius_core_production_prod/')_${{ github.event.inputs.TargetHost }}"
+          hosts="environment_name_$(echo ${{ github.event.inputs.TargetEnvironment }} | sed 's/delius-core-dev/delius_core_development_dev/;s/delius-core-test/delius_core_test_test/;s/delius-core-training/delius_core_test_training/;s/delius-core-stage/delius_core_preproduction_stage/;s/delius-core-pre-prod/delius_core_preproduction_pre_prod/;s/delius-core-prod/delius_core_production_prod/')_delius_primarydb"
           echo "hosts=${hosts}" >> $GITHUB_OUTPUT
-          echo "allHost=$(echo ${hosts} | sed 's/${{ github.event.inputs.TargetHost }}/all/')" >> $GITHUB_OUTPUT
+          echo "allHost=$(echo ${hosts} | sed 's/delius_primarydb/all/')" >> $GITHUB_OUTPUT
 
       - name: Checkout Inventory From modernisation-platform-configuration-management
         uses: actions/checkout@v4
@@ -167,15 +107,7 @@ jobs:
           echo "$command -i $inventory \
           -e @$inventory/group_vars/${{ steps.prepareinventorynames.outputs.allHost }}.yml \
           -e hosts=${{ steps.prepareinventorynames.outputs.hosts }} \
-          -e deploy_audit=${{ github.event.inputs.DeployAudit }} \
-          -e deploy_davfs=${{ github.event.inputs.DeployDavfs }} \
-          -e deploy_cfo=${{ github.event.inputs.DeployCfo }} \
           -e deploy_users=${{ github.event.inputs.DeployUsers }} \
-          -e deploy_alfresco_wallet=${{ github.event.inputs.DeployAlfrescoWallet }} \
-          -e deploy_gdpr=${{ github.event.inputs.DeployGdpr }} \
           -e deploy_performance_test_users=${{ github.event.inputs.DeployPerformanceTestUsers }} \
-          -e deploy_mms=${{ github.event.inputs.DeployMMSApi }} \
-          -e deploy_audited_interaction=${{ github.event.inputs.DeployAuditedInteraction }} \
           -e deploy_audit_stub_users=${{ github.event.inputs.DeployAuditStubUsers }} \
           -e deploy_plan_management=${{ github.event.inputs.DeployPlanManagement }}"
-          
