--- a/.github/workflows/oracle-db-delius-operational-artefacts.yml
+++ b/.github/workflows/oracle-db-delius-operational-artefacts.yml
@@ -48,7 +48,7 @@ on:
         default: "main"
 
 env:
-  command: operations/playbooks/delius-artefacts-playbook.yml"
+  command: operations/playbooks/delius-artefacts-playbook.yml
   inventory: inventory/ansible
 
 # Allow permissions on repository and docker image respectively 
