--- a/.github/workflows/oracle-db-delius-operational-artefacts.yml
+++ b/.github/workflows/oracle-db-delius-operational-artefacts.yml
@@ -52,7 +52,7 @@ on:
         default: "main"
 
 env:
-  command: operations/playbooks/delius-artefacts-playbook.yml
+  command: ansible-playbook operations/playbooks/delius-artefacts-playbook.yml
   inventory: inventory/ansible
 
 # Allow permissions on repository and docker image respectively 
