--- a/playbooks/audit_stub_users/playbook.yml
+++ b/playbooks/audit_stub_users/playbook.yml
@@ -51,23 +51,12 @@
           delegate_to: localhost
           become: no
 
-        - shell: cat ~/.ansible/roles/hmpps-delius-audit-stub-accounts/vars/main.yml
-          delegate_to: localhost
-          register: output
-          become: no
-
-        - debug: var=output
-
   - name: Read Audit Stub Users Variable
     include_role:
-      name: ${GITHUB_WORKSPACE}/stub/audit_stub_accounts
+      name: hmpps-delius-audit-stub-accounts
       apply:
         delegate_to: localhost
         become: no
-    #hmpps-delius-audit-stub-accounts
-
-  - debug: var=audit_stub_users
-  - meta: end_play
       
   - name: Define Location for Temporary Working Files
     set_fact:
