--- a/playbooks/audit_stub_users/playbook.yml
+++ b/playbooks/audit_stub_users/playbook.yml
@@ -51,12 +51,22 @@
           delegate_to: localhost
           become: no
 
+        - shell: cat ${GITHUB_WORKSPACE}/stub/audit_stub_accounts/vars/main.yml
+          delegate_to: localhost
+          become: no
+          register: out
+
+        - debug: var=out
+
   - name: Read Audit Stub Users Variable
     include_role:
       name: ${GITHUB_WORKSPACE}/stub/audit_stub_accounts
       apply:
         delegate_to: localhost
         become: no
+
+  - debug: var=audit_stub_users
+  - meta: end_play
       
   - name: Define Location for Temporary Working Files
     set_fact:
