--- a/.github/workflows/oracle-db-delius-operational-artefacts.yml
+++ b/.github/workflows/oracle-db-delius-operational-artefacts.yml
@@ -56,6 +56,7 @@ on:
         default: "main"
 
 env:
+  ansible_config: operations/playbooks/ansible.cfg
   command: ansible-playbook operations/playbooks/delius-artefacts-playbook.yml
   inventory: inventory/ansible
 
@@ -134,6 +135,7 @@ jobs:
 
       - name: Run Delius Artefacts Playbook
         run: |
+          export ANSIBLE_CONFIG=$ansible_config
           $command -i $inventory \
           -e @$inventory/group_vars/${{ steps.prepareinventorynames.outputs.allHost }}.yml \
           -e hosts=${{ steps.prepareinventorynames.outputs.hosts }} \
