--- a/.github/workflows/oracle-db-delius-configuration-artefacts.yml
+++ b/.github/workflows/oracle-db-delius-configuration-artefacts.yml
@@ -39,28 +39,28 @@ on:
         description: "Deploy Alfresco Wallet?"
         type: choice
         default: "no"
-        choice: 
+        options: 
           - "yes"
           - "no"
       DeployGdpr: 
         description: "Create Delius gdpr_pool database user?"
         type: choice
         default: "no"
-        choice: 
+        options: 
           - "yes"
           - "no"
       DeployMMSApi:
         description: "Create Delius mms_pool database user?"
         type: choice
         default: "no"
-        choice:
+        options:
           - yes"
           - "no"
       DeployAuditedInteraction:
         description: "Create Delius Audited Interaction Data Consolidation schema?"
         type: choice
         default: "no"
-        choice:
+        options:
           - "yes"
           - "no"
       SourceCodeVersion:
