Correct bash profile name

--- a/playbooks/delius_gdpr/playbook.yml
+++ b/playbooks/delius_gdpr/playbook.yml
@@ -1,15 +1,10 @@
 ---
 
   - name: Get gdpr_pool password from ssm
-    shell: |
-      . ~/.bash_proofile
-      aws ssm get-parameters --region {{ region }} --with-decryption --name /{{ environment_name }}/{{ project_name }}/delius-database/db/gdpr_pool_password | jq -r '.Parameters[].Value'
+    shell: . ~/.bash_profile && aws ssm get-parameters --region {{ region }} --with-decryption --name /{{ environment_name }}/{{ project_name }}/delius-database/db/gdpr_pool_password | jq -r '.Parameters[].Value'
     register: gdpr_pool_password
     changed_when: false
     no_log: true
-
-  - debug: var=gdpr_pool_password
-  - meta: end_play
 
   - name: Create gdpr_pool delius user
     shell: 
