--- a/.github/workflows/ldap-data-refresh.yml
+++ b/.github/workflows/ldap-data-refresh.yml
@@ -83,6 +83,7 @@ jobs:
           #          fi
           
           echo "Copying from ${source_env} to ${destination_env}"
+
   destination-pre:
     needs:
         - pre-checks
@@ -270,6 +271,14 @@ jobs:
                 fi
             done
             echo "Datasync task from ${{ github.event.inputs.source_env }} to ${{ github.event.inputs.destination_env }} completed. Switching to destination account"
+    outputs:
+      TEMP_EFS_ID: ${{ steps.get-temp-efs-id.outputs.TEMP_EFS_ID }}
+      SUBNET_IDS: ${{ steps.get-ec2-config.outputs.SUBNET_IDS }}
+      DATASYNC_SOURCE_LOCATION_ARN: ${{ steps.create-datasync-location.outputs.DATASYNC_SOURCE_LOCATION_ARN }}
+      DATASYNC_DESTINATION_LOCATION_ARN: ${{ steps.create-datasync-destination-location.outputs.DATASYNC_DESTINATION_LOCATION_ARN }}
+      DATASYNC_TASK_ARN: ${{ steps.create-datasync-task.outputs.DATASYNC_TASK_ARN }}
+
+
   destination:
     needs:
       - source
@@ -351,6 +360,9 @@ jobs:
                 fi
             done
             echo "Datasync task from ${{ github.event.inputs.source_env }} to ${{ github.event.inputs.destination_env }} completed."
+    outputs:
+      DIRECTORY: ${{ steps.get-directory.outputs.DIRECTORY }}
+
   destination-post:
     needs:
       - destination
@@ -375,3 +387,112 @@ jobs:
           aws ecs wait services-stable --cluster delius-core-${{ github.event.inputs.destination_env }}-cluster --services delius-core-${{ github.event.inputs.destination_env }}-openldap
           echo "ECS Service stable"
           echo "Data refresh complete"
+  cleanup:
+    needs:
+      - source
+      - destination
+      - destination-post
+    runs-on: ubuntu-latest
+    environment: delius-core-${{ github.event.inputs.destination_env }}
+    steps:
+      - name: "Configure AWS Credentials"
+        uses: aws-actions/configure-aws-credentials@v4
+        with:
+          role-to-assume: "arn:aws:iam::${{ vars.AWS_ACCOUNT_ID }}:role/modernisation-platform-oidc-cicd"
+          role-session-name: githubactionsrolesession
+          aws-region: "eu-west-2"
+
+      - name: Remove EFS access point and mount targets
+        run: |
+
+          # set variable for checking job failure
+          echo "CLEAN_UP_EXIT_CODE=0" >> $GITHUB_ENV
+
+          FILE_SYSTEM_ID="${{ needs.source.outputs.TEMP_EFS_ID }}"
+          echo "File system ID is $FILE_SYSTEM_ID"
+          ACCESS_POINT_ID=$(aws efs describe-access-points --file-system-id ${FILE_SYSTEM_ID} | jq -r '.AccessPoints[].AccessPointId')
+          echo "Access point ID is $ACCESS_POINT_ID"
+
+          # Delete the access point
+          aws efs delete-access-point --access-point-id $ACCESS_POINT_ID --output text --query 'AccessPointId'
+          if [[ $? -eq 0 ]]; then
+              echo "Access point $ACCESS_POINT_ID deleted"
+          else
+              echo "Failed to delete access point $ACCESS_POINT_ID"
+              increment_exit_code=$((CLEAN_UP_EXIT_CODE + 1))
+              echo "CLEAN_UP_EXIT_CODE=$increment_exit_code" >> $GITHUB_ENV
+          fi
+
+          # Delete the mount targets
+          MOUNT_TARGET_IDS=$(aws efs describe-mount-targets --file-system-id $FILE_SYSTEM_ID --query 'MountTargets[*].MountTargetId' --output text)
+
+          for MOUNT_TARGET_ID in $MOUNT_TARGET_IDS; do
+              aws efs delete-mount-target --mount-target-id $MOUNT_TARGET_ID
+              if [[ $? -eq 0 ]]; then
+                echo "Mount target $MOUNT_TARGET_ID deleted"
+              else
+                echo "Failed to delete mount target $MOUNT_TARGET_ID"
+                increment_exit_code=$((CLEAN_UP_EXIT_CODE + 1))
+                echo "CLEAN_UP_EXIT_CODE=$increment_exit_code" >> $GITHUB_ENV
+              fi
+          done
+
+          # Wait for mount targets to be deleted
+          echo "checking mount targets exist..."
+          CHECK="this var will be used to check the status of the deletion"
+          echo "entering loop..."
+          while [[ -n $CHECK ]]; do
+            echo "check not empty"
+            echo "CHECK: $CHECK"
+            CHECK=$(aws efs describe-mount-targets --file-system-id $FILE_SYSTEM_ID --query 'MountTargets[*].MountTargetId' --output text)
+            if [[ -n $CHECK ]]; then
+              sleep 5
+            fi
+          done
+        continue-on-error: true
+
+      - name: Remove temporary EFS
+        run: |
+
+          aws efs delete-file-system --file-system-id ${{ needs.source.outputs.TEMP_EFS_ID }} 
+          if [[ $? -eq 0 ]]; then
+            echo "File system ${{ needs.source.outputs.TEMP_EFS_ID }}  deleted"
+          else
+            echo "Failed to delete file system ${{ needs.source.outputs.TEMP_EFS_ID }}"
+            increment_exit_code=$((CLEAN_UP_EXIT_CODE + 1))
+            echo "CLEAN_UP_EXIT_CODE=$increment_exit_code" >> $GITHUB_ENV
+          fi
+        continue-on-error: true
+
+      - name: Clear up datasync task & locations
+        run: |
+
+          # delete datasync task
+          aws datasync delete-task --task-arn ${{ needs.source.outputs.DATASYNC_TASK_ARN }}
+          # delete location for for temp EFS
+          aws datasync delete-location --location-arn ${{ needs.source.outputs.DATASYNC_SOURCE_LOCATION_ARN }}
+          # delete location for S3
+          aws datasync delete-location --location-arn ${{ needs.source.outputs.DATASYNC_DESTINATION_LOCATION_ARN }}
+        continue-on-error: true
+
+      - name: Remove S3 directory
+        run: |
+          echo "Removing S3 directory ${{ needs.destination.outputs.DIRECTORY }}... "
+          aws s3 rm s3://${{ github.event.inputs.destination_env }}-ldap-data-refresh-incoming/${{ needs.destination.outputs.DIRECTORY }} --recursive
+          if [[ $? -eq 0 ]]; then
+            echo "S3 directory ${{ needs.destination.outputs.DIRECTORY }} removed"
+          else
+            echo "Failed to delete S3 directory ${{ needs.destination.outputs.DIRECTORY }}"
+            increment_exit_code=$((CLEAN_UP_EXIT_CODE + 1))
+            echo "CLEAN_UP_EXIT_CODE=$increment_exit_code" >> $GITHUB_ENV
+          fi
+        continue-on-error: true
+
+      - name: Set overall cleanup job status
+        run: |
+          if [ "$CLEAN_UP_EXIT_CODE" -eq 0 ]; then
+            echo "All steps completed successfully"
+          else
+            echo "At least one step failed, marking the job as failed"
+            exit 1
+          fi          
