Missing double quote

--- a/.github/workflows/oracle-db-delius-configuration-artefacts.yml
+++ b/.github/workflows/oracle-db-delius-configuration-artefacts.yml
@@ -54,7 +54,7 @@ on:
         type: choice
         default: "no"
         options:
-          - yes"
+          - "yes"
           - "no"
       DeployAuditedInteraction:
         description: "Create Delius Audited Interaction Data Consolidation schema?"
