--- a/.github/workflows/oracle-db-validate-backups.yml
+++ b/.github/workflows/oracle-db-validate-backups.yml
@@ -173,7 +173,7 @@ jobs:
           force: true
 
       - name: Randomize TargetHost If Specified
-        if:  ${{ (github.event_name == 'workflow_dispatch' || github.event_name == 'schedule')  && contains($RmanTarget,'Random') }}
+        if: ${{ (github.event_name == 'workflow_dispatch' || github.event_name == 'schedule')  && contains( env.RmanTarget,'Random') }}
         working-directory: ${{ env.inventory }}
         id: randomizetargethost
         run: |
