--- a/.github/workflows/oracle-db-validate-backups.yml
+++ b/.github/workflows/oracle-db-validate-backups.yml
@@ -179,8 +179,8 @@ jobs:
         run: |
           databasetype=$(echo ${RmanTarget} | sed 's/^.*_Random \(.*\) Standby$/\1/' | tr '[:upper:]' '[:lower:]')
           prefix=$(echo ${RmanTarget} | sed 's/^\(.*\)_Random \(.*\) Standby$/\1/' |  tr '[:upper:]' '[:lower:]')
-          high_availability_count=$(yq --arg databasetype "${databasetype}" '.high_availability_count[$databasetype]' group_vars/${prefix}_all.yml)
-          [[ ${high_availability_count} -gt 0 ]] && RmanTarget="${prefix}_${type}_standby_$(($RANDOM % ${high_availability_count} + 1 ))"
+          high_availability_count=$(yq .high_availability_count.${databasetype} group_vars/${prefix}_all.yml)
+          [[ ${high_availability_count} -gt 0 ]] && RmanTarget="${prefix}_${databasetype}_standbydb$(($RANDOM % ${high_availability_count} + 1 ))"
 
       - name: Configure AWS Credentials
         id: login-aws
