--- a/.github/workflows/oracle-db-restore-points.yml
+++ b/.github/workflows/oracle-db-restore-points.yml
@@ -96,7 +96,7 @@ jobs:
               DATE="${1}"
 
               # Time format hour[01..23]:min[01..59]:sec[01..59]
-              TIMEFORMAT="(([012][0]|[01][1-9]|[2][1-3]):([012345][0-9]):([012345][0-9]))"
+              TIMEFORMAT="(([012][0]|[01][1-9]|[2][1-3])-([012345][0-9])-([012345][0-9]))"
 
               # Date format day[01..31], month[01,03,05,07,08,10,12], year[1900..2099]
               DATE_1="((([123][0]|[012][1-9])|3[1])-(0[13578]|1[02])-(19|20)[0-9][0-9])"
@@ -111,7 +111,7 @@ jobs:
               DATE_4="(29-02-(19|20(0[48]|[2468][048]|[13579][26])))"
 
               # Match the date in the Regex
-              if [[ "${DATE}" =~ ^((${DATE_1}|${DATE_2}|${DATE_3}|${DATE_4}) ${TIMEFORMAT})$ ]]
+              if [[ "${DATE}" =~ ^((${DATE_1}|${DATE_2}|${DATE_3}|${DATE_4})-${TIMEFORMAT})$ ]]
               then
                   echo "Restore Datetime ${DATE} valid"
               else
