--- a/.github/workflows/oracle-db-restore-points.yml
+++ b/.github/workflows/oracle-db-restore-points.yml
@@ -89,7 +89,7 @@ jobs:
     steps:
 
       - name: Check Restore DateTime Input
-        if: ${{ github.event.inputs.RestoreDateTime != '') }}
+        if: ${{ github.event.inputs.RestoreDateTime != '' }}
         run: |
           isDateInvalid()
           {
