--- a/.github/workflows/oracle-db-restore-points.yml
+++ b/.github/workflows/oracle-db-restore-points.yml
@@ -185,11 +185,12 @@ jobs:
           aws-region: ${{ secrets.AWS_REGION }}
 
       - name: Start Ansible Validate Backup
-        run: 
-          export ANSIBLE_CONFIG=$ansible_config
-          $command -i $inventory \
-          -e target_dbs="${{ steps.definetargets.output.targets }}" \
-          -e required_action="${{ github.event.inputs.RequiredAction }}" \
-          -e restore_point_name="${{ github.event.inputs.RestorePointName }}" \
-          -e restore_date_time="${{ github.event.inputs.RestoreDateTime }}" 
+        run: |
+          echo "${{ steps.definetargets.output.targets }}"
+          # export ANSIBLE_CONFIG=$ansible_config
+          # $command -i $inventory \
+          # -e target_dbs="${{ steps.definetargets.output.targets }}" \
+          # -e required_action="${{ github.event.inputs.RequiredAction }}" \
+          # -e restore_point_name="${{ github.event.inputs.RestorePointName }}" \
+          # -e restore_date_time="${{ github.event.inputs.RestoreDateTime }}" 
           
